# depthcharge

./: .gitignore  .trufflehog.yml  README.md  depthcharge.py  malicious_test.py  patch_app.py  patch_depthcharge.py  pyproject.toml  requests_scan.txt  requirements.txt  run.py  scorer.py  test_requirements.txt  test_secrets.py
.github/workflows/: depthcharge-ci.yml  security-scan.yml  zap-scan.yml
.semgrep/: supply-chain.yml
.zap/: rules.tsv
ci/: github_action.py
demo/: malicious_test.py
demo/vulnerable_app/: app.py
falco/: depthcharge_rules.yaml
modules/dashboard/: app.py
modules/dashboard/static/css/: depthcharge.css  style.css
modules/dashboard/static/js/: main.js
modules/dashboard/templates/: base.html  findings.html  index.html  inventory.html  overview.html  scanner.html
modules/report/: pdf_generator.py
modules/reputation/: checker.py
modules/sandbox/: Dockerfile  js_monitor.js  py_monitor.py  runner.py  sandbox_monitor.py
modules/sbom/: generator.py
modules/static/: analyzer.py
tests/: test_scanners.py
tests/evilpkg/: setup.py
tests/evilpkg/evilpkg.egg-info/: PKG-INFO  SOURCES.txt
tests/test_packages/: legit_packages.txt  malware_packages.txt
tests/test_packages/dynamic_malware/: setup.py
tests/test_packages/dynamic_malware/evil_curl_exfil.egg-info/: PKG-INFO  SOURCES.txt
tests/test_packages/dynamic_malware/evil_dynamic.egg-info/: PKG-INFO  SOURCES.txt
